# Stocks

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: launch.json
scripts/: run_asx_prices.sh  run_watchlist.sh
src/: indicators.rs  lib.rs  main.rs  portfolio.rs
web/: eslint.config.js  package-lock.json  package.json  vite.config.ts
web/.vite/deps_temp_e421052e/: _metadata.json
web/coverage/: clover.xml  coverage-final.json  fifo.ts.html  index.html
web/src/: App.css  App.tsx
web/src/components/: Analysis.tsx  ConfigPanel.tsx  Dashboard.test.tsx  Dashboard.tsx  EventLogViewer.tsx  HoldingsManager.test.tsx  HoldingsManager.tsx  PriceChart.test.tsx  PriceChart.tsx  SoldStocks.tsx  StockAnalysis.tsx  Transactions.tsx  WatchlistManager.tsx
web/src/services/: api.test.ts  api.ts
web/src/utils/: async.ts  fifo.test.ts  fifo.ts  holdings.ts  sectors.ts  sma.ts  utils.test.ts
